Fix events overflow (#4511)
* Fix events overflow

* Remove height: 100%

--- a/src/devtools/client/debugger/src/components/shared/Accordion.css
+++ b/src/devtools/client/debugger/src/components/shared/Accordion.css
@@ -13,6 +13,11 @@
   height: 100%;
 }
 
+.accordion > li {
+  display: flex;
+  flex-direction: column;
+}
+
 .accordion ._header {
   background-color: #fff;
   display: flex;
@@ -68,6 +73,5 @@
 .accordion ._content {
   font-size: var(--theme-body-font-size);
   overflow-y: auto;
-  height: 100%;
   background-color: white;
 }
